--- a/environment.yml
+++ b/environment.yml
@@ -1,12 +1,11 @@
 name: app_environment
 channels:
   - snowflake
-  - conda-forge
+  - nodefaults
 dependencies:
-  - python=3.11.*
-  - streamlit=1.24.0
+  - python=3.8
+  - streamlit
   - pandas
   - numpy
-  - scipy
-  - scikit-learn
+  - scipy  # ✅ Only if available in Snowflake Anaconda
   - snowflake-snowpark-python
