--- a/environment.yml
+++ b/environment.yml
@@ -3,9 +3,9 @@ channels:
   - snowflake
   - nodefaults
 dependencies:
-  - python >= 3.8
-  - streamlit
+  - python = 3.11
   - pandas
   - numpy
   - scipy  # ✅ Only if available in Snowflake Anaconda
+  - streamlit
   - snowflake-snowpark-python
